# ToyLLMTrainerOnMac

./: README.md  pyproject.toml  train_toy_llm.sh
scripts/: grpo_llm_nv.sh  train_grpo.sh  train_toy_llm.sh
src/: train_grpo.py
